src/assets/css/layout/_nav.scss
@import 'abstracts/variables';
$hamburger-size: 35px;
$hamburger-thickness: 3px;
$hamburger-animations: (stack);
$hamburger-color: $hamburgercolor;
@import "~delicious-hamburgers/scss/hamburgers";

nav {
  display: grid;
  // need this?
  grid-template-rows: auto auto;
  grid-template-columns: 0.5fr 0.5fr;
  // need this end?
  grid-template-areas:
    'logo nav-burger'
    'nav-items nav-items';
  background: $navbgcolor1;
  font-family: $navfontfamily;

  a {
    position: relative;
    text-decoration: none;
    color: $navfontcolor;
  }

}

#logo-wrap {
  grid-area: logo;
}

.nav-top-wrap {
  display: flex;
  align-items: center;
  padding: 0.5em 1em;
}

#logo {
  color: $logofontcolor;
  font-family: $logofontfamily;
  font-size: $logofontsize;
  font-weight: bold;
}

#logo-separator {
  color: $btnred;
}

#nav-btn-wrap {
  grid-area: nav-burger;
  justify-self: end;
}

#nav-btn {
  padding: 25px 0;
}

#nav-items-wrap {
  grid-area: nav-items;
  background: $navbgcolor2;
  overflow: hidden;
  height: 0;
  -webkit-transition: height 0.2s ease;
  transition: height 0.2s ease;
}

#nav-items {
  display: flex;
  justify-content: space-around;
  list-style: none;
  margin: 0 1em;
  padding: 1em 0;

  a {
    height: 100%;
    font-size: $navfontsize;
  }

  a:hover {
    color: $navfontcolor;
  }

  a:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: $btnred;
    visibility: hidden;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transition: all 0.3s ease-in-out 0s;
    transition: all 0.3s ease-in-out 0s;
  }

  a:hover:before {
    visibility: visible;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
  }
}

@media screen and (min-width: $screen-lg-min) {
  nav {
    grid-template-columns: 0.3fr 0.7fr;
    grid-template-areas: 
      'logo nav-items';
  }

  #nav-items-wrap {
    height: auto;
    background: $navbgcolor1;
  }

  #nav-items {
    a, a:hover {
      color: $navfontcolor1;
    }
  }

  #nav-btn {
    display: none;
  }
}

